//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Hope" {
  database_type: 'PostgreSQL'
  Note: 'Hope'
}

Table Organization {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  walletAddress Bytes [unique]
  profileImage String
  isActive Boolean [not null, default: true]
  isBlocked Boolean [not null, default: false]
  lastLoggedIn DateTime [default: `now()`]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  projects Project [not null]
}

Table Project {
  id Int [pk, increment]
  name String [not null]
  budget Float [not null]
  tokenName String [not null]
  tokenQuantity Float [not null]
  tokenSymbol String [not null]
  rwaRepresentation String [not null]
  description String [not null]
  organizationId String [not null]
  organization Organization [not null]
  vendors Vendor [not null]
  beneficiaries Beneficiary [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Vendor {
  id Int [pk, increment]
  name String [not null]
  walletAddress String [unique, not null]
  location String [not null]
  email String [not null]
  projectId Int [not null]
  project Project [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Beneficiary {
  id Int [pk, increment]
  name String [not null]
  walletAddress String [unique, not null]
  email String
  gender String [not null]
  age Int [not null]
  latitude Float [not null]
  longitude Float [not null]
  projectId Int [not null]
  project Project [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Project.organizationId > Organization.id

Ref: Vendor.projectId > Project.id

Ref: Beneficiary.projectId > Project.id